/***********************************************************************
X3 ChangeLog

2009-11-28  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/mod-memoserv.c: Fix for bug where MemoServ is created as a
	local bot but not registered as a service on first startup.

2009-11-26  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Fixed a missing ',' in cmd_myaccess output.

2009-11-26  Henrik Stuart  <evilnet@hstuart.dk>

	* src/common.h src/main-common.c: add extra parameter to reg_exit_func and
	exit_func_t.

	* src/proto-p10.c src/mod-qserver.c src/chanserv.c src/mod-snoop.c
	src/hash.c src/helpfile.c src/gline.c src/global.c src/mod-helpserv.c
	src/opserv.c src/timeq.c src/saxdb.c src/modcmd.c src/saxdb.h
	src/mod-sockcheck.c src/shun.c src/mod-python.c src/spamserv.c
	src/mail-common.c src/mod-memoserv.c src/mod-track.c src/log.c src/ioset.c
	src/nickserv.c src/main.c src/sar.c: collateral evolution fixes due to
	exit_func change.

2009-11-26  Henrik Stuart  <evilnet@hstuart.dk>

	* src/proto-common.c: fix typo in malloc variable name.

2009-11-26  Henrik Stuart  <evilnet@hstuart.dk>

	* src/modcmd.h src/modcmd.c: add extra parameter to reg_svccmd_unbind_func
	and svccmd_unbind_func_t.

	* src/chanserv.c: collateral evolution fixes due to svccmd_unbind_func
	change.

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/proto.h src/proto-common.c: add extra parameter to
	reg_mode_change_func and mode_change_func_t.

	* src/chanserv.c: collateral evolution fixes due to mode_change_func
	change.

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/nickserv.c: add extra parameter to reg_unreg_func and
	unreg_func_t.

	* src/chanserv.c src/mod-helpserv.c src/mod-memoserv.c: collateral
	evolution fixes due to unreg_func change.

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/nickserv.c: add extra parameter to reg_auth_func and
	auth_func_t.

	* src/chanserv.c src/mod-snoop.c src/global.c src/mod-helpserv.c